# psysonic

./: .gitignore  CHANGELOG.md  CLAUDE.md  ORBIT.md  PRIVACY.md  README.md  flake.nix  index.html  nixos-install.md  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: release.yml
src/: App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/patches/cpal-0.15.3/src/host/alsa/: mod.rs
src-tauri/src/: analysis_cache.rs  audio.rs  discord.rs  lib.rs  main.rs  taskbar_win.rs  visualizer.rs
src/api/: azuracast.ts  bandsintown.ts  navidromeBrowse.ts  orbit.ts  subsonic.ts
src/components/: AlbumCard.tsx  AlbumHeader.tsx  AlbumTrackList.tsx  ArtistCardLocal.tsx  ArtistRow.tsx  CachedImage.tsx  CircularVisualizer.tsx  ConfirmModal.tsx  ContextMenu.tsx  CustomSelect.tsx  ExportPickerModal.tsx  FullscreenPlayer.tsx  GlobalConfirmModal.tsx  Hero.tsx  HostApprovalQueue.tsx  LiveSearch.tsx  LyricsPane.tsx  MarqueeText.tsx  MiniPlayer.tsx  MobilePlayerView.tsx  NowPlayingDropdown.tsx  NowPlayingInfo.tsx  OfflineBanner.tsx  OrbitAccountPicker.tsx  OrbitExitModal.tsx  OrbitGuestQueue.tsx  OrbitHelpModal.tsx  OrbitJoinModal.tsx  OrbitParticipantsPopover.tsx  OrbitQueueHead.tsx  OrbitSessionBar.tsx  OrbitSettingsPopover.tsx  OrbitSharePopover.tsx  OrbitStartModal.tsx  OrbitStartTrigger.tsx  OrbitWordmark.tsx  OverlayScrollArea.tsx  PSmallLogo.tsx  PasteClipboardHandler.tsx  PlaybackScheduleBadge.tsx  (+14 more)
src/config/: navItems.ts
src/constants/: appScroll.ts
src/hooks/: useConnectionStatus.ts  useOrbitGuest.ts  useOrbitHost.ts  useOrbitSongRowBehavior.ts  useRadioMetadata.ts  useWindowVisibility.tsx
src/locales/: de.ts  en.ts  es.ts  fr.ts  nb.ts  nl.ts  ru.ts  zh.ts
src/pages/: AdvancedSearch.tsx  AlbumDetail.tsx  Albums.tsx  ArtistDetail.tsx  Artists.tsx  DeviceSync.tsx  Favorites.tsx  FolderBrowser.tsx  Genres.tsx  Help.tsx  Home.tsx  InternetRadio.tsx  Login.tsx  NewReleases.tsx  NowPlaying.tsx  OfflineLibrary.tsx  PlaylistDetail.tsx  Playlists.tsx  RandomAlbums.tsx  RandomMix.tsx  SearchResults.tsx  Settings.tsx  Statistics.tsx  Tracks.tsx  WhatsNew.tsx
src/store/: analysisSync.ts  authStore.ts  confirmModalStore.ts  deviceSyncJobStore.ts  deviceSyncStore.ts  globalShortcutsStore.ts  helpModalStore.ts  hotCacheStore.ts  lyricsStore.ts  offlineJobStore.ts  offlineStore.ts  orbitAccountPickerStore.ts  orbitStore.ts  playerStore.ts  playlistStore.ts  selectionStore.ts  sidebarStore.ts  themeStore.ts  zipDownloadStore.ts
src/styles/: components.css  layout.css  theme.css  tracks.css
src/utils/: applySharePaste.ts  backup.ts  changelogMarkdown.tsx  copyEntityShareLink.ts  easeScroll.ts  exportNewAlbums.ts  imageCache.ts  mixRatingFilter.ts  orbit.ts  orbitBulkGuard.ts  orbitNames.ts  overlayScrollbarMetrics.ts  overlayScrollbarThumb.ts  playAlbum.ts  playSong.ts  playbackScheduleFormat.ts  resolvePlaybackUrl.ts  serverMagicString.test.ts  serverMagicString.ts  shareLink.test.ts  shareLink.ts  springScroll.ts  subsonicServerIdentity.ts  switchActiveServer.ts  useTracklistColumns.ts
